api auth support
